# arachne

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  todo.md  todo2.md  tsconfig.json  vite.config.ts
.github/workflows/: windows-msi.yml
agents/: Cargo.toml
agents/src/: domain.rs  file_mutation.rs  language_detection.rs  lib.rs  llm.rs  memory.rs  message_bus.rs  model_spec.rs  paths.rs  permission.rs  provider_oauth.rs  provider_service.rs  runtime.rs  snapshot.rs  ssrf.rs  tools.rs
agents/src/config/: agent.rs  mcp.rs  mod.rs  providers.rs  ui.rs  websearch.rs
agents/src/database/: connection.rs  mod.rs  repositories.rs
agents/src/llm/: events.rs  request.rs  session.rs  subagent_registry.rs  xml_tool_call.rs  xml_tools.rs
agents/src/llm/providers/: aisdk_provider.rs  aisdk_wrappers.rs  anthropic.rs  error_parsing.rs  minimax_token_plan.rs  mod.rs  openai_compatible_backend.rs  openai_compatible_chat.rs  openai_compatible_http.rs  openai_compatible_sdk.rs  sdk_tool_registry.rs  xml_tool_call.rs
agents/src/llm/providers/http/: mod.rs  openai_compatible.rs
agents/src/llm/providers/sdk/: aisdk_provider.rs  aisdk_wrappers.rs  mod.rs  openai_compatible.rs  tool_registry.rs
agents/src/llm/providers/sse_proxy/: mod.rs  parser.rs  proxy.rs
agents/src/mcp/: mod.rs
agents/src/permission_v2/: config.rs  mod.rs  ruleset.rs  service.rs  wildcard.rs
agents/src/routing/: context_block.rs  integration.rs  mod.rs  resolver.rs  tokenizer.rs  virtual_group.rs
agents/src/routing/discovery/: docs.rs  mod.rs  stack.rs  symbols.rs  tfidf.rs
agents/src/routing/matchers/: jaccard.rs  mod.rs
agents/src/sandbox/: mod.rs  network.rs  path.rs  shell.rs  trigger.rs
agents/src/sessions/: compaction.rs  conversation.rs  mod.rs  prompts.rs  service.rs
agents/src/tools/: apply_patch.rs  ask_peer.rs  edit.rs  ghidra.rs  glob.rs  grep.rs  lsp.rs  mod.rs  output_bounds.rs  read.rs  shell.rs  task.rs  webfetch.rs  websearch.rs  write.rs
agents/src/tools/lsp/: output.rs
agents/tests/fixtures/: sample_target.rs
config/: provider-models.json
desktop/app/layout/: AppShell.tsx
desktop/app/layout/components/: AppTitleBar.tsx  ProjectSidebar.tsx  SettingsPage.tsx
desktop/components/: node-web-svg.tsx
desktop/components/loops/: LoopConfigDialog.tsx  LoopNode.tsx  index.ts
desktop/components/sessions/: DeleteSessionDialog.tsx  PermissionPromptBar.tsx  SessionCanvas.tsx  SessionChat.tsx  SessionConfigPanel.tsx  SessionDiffPane.tsx  SessionNode.tsx  ThinkBlock.tsx
desktop/components/ui/: button.tsx  dialog.tsx  diff-block.tsx  input.tsx  markdown-content.tsx  prompt-card.tsx  scroll-area.tsx  themed-code-block.tsx
desktop/dev/: tauri-event-stub.ts  tauri-stub.ts  tauri-window-stub.ts
desktop/features/app/: appStore.ts
desktop/features/loops/: loopStore.ts
desktop/features/permissions/: permissionStore.ts
desktop/features/sessions/: conversationStore.ts  providerModels.ts  sessionStore.ts
desktop/lib/: markdownStream.ts
desktop/pages/sessions/: SessionWorkspace.tsx
desktop/styles/: globals.css
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: error.rs  main.rs
src-tauri/src/commands/: agent_commands.rs  compaction_commands.rs  file_commands.rs  mod.rs  permission_commands.rs  project_commands.rs  provider_commands.rs  session_commands.rs  session_diff_commands.rs  settings_commands.rs  ui_commands.rs
src-tauri/src/db/: connection.rs  mod.rs  repositories.rs
src-tauri/src/domain/: message.rs  mod.rs  project.rs  provider.rs  tech_stack.rs
src-tauri/src/services/: agent_runtime.rs  agent_service.rs  context_indexer.rs  file_service.rs  memory_service.rs  message_bus.rs  mod.rs  permission_map.rs  project_service.rs  settings_service.rs  stack_detector.rs  tree_sitter.rs  ui_command_service.rs  watcher_service.rs
src/app/layout/: AppShell.tsx
src/app/layout/components/: SettingsPage.tsx
src/components/sessions/: DeleteSessionDialog.tsx  SessionCanvas.tsx  SessionChat.tsx  SessionNode.tsx  index.ts
src/components/ui/: dialog.tsx  scroll-area.tsx
src/features/agents/: AgentChat.tsx  AgentComposer.tsx  AgentMessageList.tsx  AgentNodeCard.tsx  AgentSessionMap.tsx  agentStore.ts  index.ts
src/features/context/: ContextPanel.tsx  index.ts
src/features/editor/: EditorPane.tsx  editorStore.ts  index.ts
src/features/project/: ProjectPicker.tsx  ProjectTree.tsx  index.ts  projectStore.ts
src/features/sessions/: conversationStore.ts
src/features/settings/: ProviderSettings.tsx  index.ts  settingsStore.ts
src/lib/: events.ts  tauri.ts  types.ts
src/pages/sessions/: SessionWorkspace.tsx
src/styles/: globals.css
