[package]
name = "arachne-agents"
version = "0.1.0"
edition = "2021"

[dependencies]
aisdk = { version = "0.5.2", features = ["full", "openaicompatible"] }
async-stream = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
ignore = "0.4"
ipnet = "2.12"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rusqlite = { version = "0.40.0", features = ["bundled"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "macros"] }
tokio-stream = "0.1"
tracing = "0.1"
uuid = { version = "1.8", features = ["v4"] }
walkdir = "2.4"

[dev-dependencies]
tempfile = "3.10"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
