[package]
name = "arachne-agents"
version = "0.1.0"
edition = "2021"

[dependencies]
aisdk = { version = "0.5.2", features = ["full", "openaicompatible"] }
async-stream = "0.3"
async-trait = "0.1"
bytes = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0.0"
futures-util = "0.3"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server-auto", "http1"] }
ignore = "0.4"
ipnet = "2.12"
lsp-types = "0.97"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rusqlite = { version = "0.40.0", features = ["bundled"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.10"
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "macros", "net", "io-util", "time", "process"] }
tokio-stream = "0.1"
tree-sitter-language-pack = "1.12"
tracing = "0.1"
uuid = { version = "1.8", features = ["v4"] }
walkdir = "2.4"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
